Fix deprecated biblatex option.

--- a/notes.tex
+++ b/notes.tex
@@ -10,7 +10,7 @@
 \hypersetup{breaklinks}
 \hypersetup{pdfborder=0 0 0}
 
-\usepackage[terseinits=true, firstinits=true]{biblatex}
+\usepackage[terseinits=true, giveninits=true]{biblatex}
 \DeclareNameAlias{default}{last-first}
 \renewcommand{\revsdnamepunct}{}
 \DeclareFieldFormat{title}{\textit{#1}}
